Fixed z-index of overlay

--- a/wwwroot/assets/css/global.css
+++ b/wwwroot/assets/css/global.css
@@ -218,8 +218,8 @@ Table of contents
         opacity: .70;
         filter: Alpha(Opacity=70);
         z-index: 1001;
-        -webkit-transform: translateZ(1000px);
-        -moz-transform: translateZ(1000px);
+        -webkit-transform: translateZ(200px);
+        -moz-transform: translateZ(200px);
     }
     #loading {
     	display: none;
@@ -229,12 +229,12 @@ Table of contents
     	position: absolute;
     	width: 100%;
         height: 100%;
-        -webkit-transform: translateZ(1000px);
-        -moz-transform: translateZ(1000px);
+        z-index: 1002;
+        -webkit-transform: translateZ(200px);
+        -moz-transform: translateZ(200px);
     }
     #loading img {
     	position: relative;
-    	z-index: 1002;
     	top: 45%;
 	}
 
